--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.2.0",
     "@react-native-community/blur": "^4.3.2",
     "@rneui/base": "^4.0.0-rc.8",
     "@rneui/themed": "^4.0.0-rc.8",
@@ -17,11 +18,13 @@
     "jetifier": "^2.0.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
+    "react-hook-form": "^7.45.4",
     "react-native": "0.72.4",
     "react-native-linear-gradient": "^2.8.2",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-vector-icons": "^10.0.0",
-    "tailwind-merge": "^1.14.0"
+    "tailwind-merge": "^1.14.0",
+    "zod": "^3.22.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
