--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 
 # Xcode
 #
-build/
+**/build/
 *.pbxuser
 !default.pbxuser
 *.mode1v3
@@ -24,7 +24,7 @@ ios/.xcode.env.local
 
 # Android/IntelliJ
 #
-build/
+**/build/
 .idea
 .gradle
 local.properties
@@ -36,9 +36,9 @@ local.properties
 
 # node.js
 #
-node_modules/
-npm-debug.log
-yarn-error.log
+**/node_modules/
+**/npm-debug.log
+**/yarn-error.log
 
 # fastlane
 #
@@ -56,11 +56,11 @@ yarn-error.log
 *.jsbundle
 
 # Ruby / CocoaPods
-/ios/Pods/
-/vendor/bundle/
+mobile/ios/Pods/
+mobile/vendor/bundle/
 
 # Temporary files created by Metro to check the health of the file watcher
-.metro-health-check*
+mobile/.metro-health-check*
 
 # testing
-/coverage
+**/coverage
