--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "author": "MALYANA Mohamed",
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^20.5.1",
     "@types/uuid": "^9.0.0",
     "esbuild-plugin-pino": "^1.2.8",
@@ -27,20 +28,27 @@
     "@fastify/bearer-auth": "^9.0.0",
     "@fastify/sensible": "^5.2.0",
     "@fastify/swagger": "^8.3.1",
+    "@prisma/client": "5.2.0",
+    "@trpc/server": "^10.38.0",
     "bcrypt": "^5.1.0",
     "currency.js": "^2.0.4",
     "date-fns": "^2.30.0",
+    "dotenv": "^16.3.1",
     "exponential-backoff": "^3.1.1",
     "fastify": "^4.11.0",
+    "fastify-auth": "^1.2.0",
     "fastify-plugin": "^4.5.0",
     "fastify-queue": "^1.2.7",
     "fastify-zod": "^1.3.2",
     "ioredis": "^5.3.2",
+    "jsonwebtoken": "^9.0.1",
     "pino-datadog-transport": "^1.2.2",
+    "prisma": "^5.2.0",
     "tiny-glob": "^0.2.9",
     "tsup": "^6.5.0",
     "tsx": "^3.12.7",
     "typescript": "4.8.4",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "zod": "^3.22.2"
   }
 }
