--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -17,6 +17,6 @@
     "outDir": "./build/",
     "rootDir": "."
   },
-  "include": ["./src/", "./tsup.config.ts"],
+  "include": ["./src/", "./tsup.config.ts", "./types/*"],
   "exclude": ["**/node_modules", "**/.*/"]
 }
