--- a/server/package.json
+++ b/server/package.json
@@ -47,6 +47,7 @@
     "tiny-glob": "^0.2.9",
     "tsup": "^6.5.0",
     "tsx": "^3.12.7",
+    "twilio": "^4.16.0",
     "typescript": "4.8.4",
     "uuid": "^9.0.0",
     "zod": "^3.22.2"
