--- a/mobile/package.json
+++ b/mobile/package.json
@@ -12,16 +12,28 @@
   "dependencies": {
     "@hookform/resolvers": "^3.2.0",
     "@react-native-community/blur": "^4.3.2",
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/stack": "^6.3.17",
     "@rneui/base": "^4.0.0-rc.8",
     "@rneui/themed": "^4.0.0-rc.8",
+    "@tanstack/react-query": "^4.33.0",
+    "@trpc/client": "^10.38.1",
+    "@trpc/react-query": "^10.38.1",
+    "@trpc/server": "^10.38.1",
     "clsx": "^2.0.0",
     "jetifier": "^2.0.0",
+    "jotai": "^2.4.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-hook-form": "^7.45.4",
     "react-native": "0.72.4",
+    "react-native-config": "^1.5.1",
+    "react-native-dotenv": "^3.4.9",
+    "react-native-encrypted-storage": "^4.0.3",
+    "react-native-gesture-handler": "^2.12.1",
     "react-native-linear-gradient": "^2.8.2",
-    "react-native-safe-area-context": "^4.7.1",
+    "react-native-safe-area-context": "^4.7.2",
+    "react-native-screens": "^3.25.0",
     "react-native-vector-icons": "^10.0.0",
     "tailwind-merge": "^1.14.0",
     "zod": "^3.22.2"
