implement otp verification

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,12 +10,14 @@
     "fastify",
     "fileoverview",
     "hookform",
+    "libphonenumber",
     "MALYANA",
     "nativewind",
     "pino",
     "rneui",
     "tailwindcss",
     "tanstack",
+    "textinput",
     "trpc",
     "tsup",
     "typecheck"
