--- a/mobile/package.json
+++ b/mobile/package.json
@@ -21,8 +21,10 @@
     "@trpc/react-query": "^10.38.1",
     "@trpc/server": "^10.38.1",
     "clsx": "^2.0.0",
+    "date-fns": "^2.30.0",
     "jetifier": "^2.0.0",
     "jotai": "^2.4.1",
+    "libphonenumber-js": "^1.10.44",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-hook-form": "^7.45.4",
@@ -32,6 +34,8 @@
     "react-native-encrypted-storage": "^4.0.3",
     "react-native-gesture-handler": "^2.12.1",
     "react-native-linear-gradient": "^2.8.2",
+    "react-native-otp-textinput": "^1.1.1",
+    "react-native-phone-number-input": "^2.1.0",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
     "react-native-vector-icons": "^10.0.0",
