--- a/mobile/package.json
+++ b/mobile/package.json
@@ -59,7 +59,7 @@
     "prettier": "^2.4.1",
     "react-test-renderer": "18.2.0",
     "tailwindcss": "3.3.2",
-    "typescript": "4.8.4"
+    "typescript": "^5.2.2"
   },
   "engines": {
     "node": ">=16"
