--- a/mobile/package.json
+++ b/mobile/package.json
@@ -39,6 +39,7 @@
     "react-native-phone-number-input": "^2.1.0",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
+    "react-native-svg": "^13.14.0",
     "react-native-vector-icons": "^10.0.0",
     "tailwind-merge": "^1.14.0",
     "zod": "^3.22.2"
@@ -57,6 +58,7 @@
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.76.8",
     "prettier": "^2.4.1",
+    "react-native-svg-transformer": "^1.1.0",
     "react-test-renderer": "18.2.0",
     "tailwindcss": "3.3.2",
     "typescript": "^5.2.2"
