add upload images feature

--- a/mobile/android/app/build.gradle
+++ b/mobile/android/app/build.gradle
@@ -80,6 +80,9 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
+
+        //for react-native-image-crop-picke
+        vectorDrawables.useSupportLibrary = true
     }
     signingConfigs {
         debug {
