--- a/mobile/package.json
+++ b/mobile/package.json
@@ -7,7 +7,8 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "clean": "watchman watch-del-all && killall -9 node && rm -rf yarn.lock package-lock.json node_modules ios/Pods ios/Podfile.lock android/app/build && npm install && cd ios && pod update && cd .. && npm start -- --reset-cache"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.2.0",
@@ -33,10 +34,14 @@
     "react-native-config": "^1.5.1",
     "react-native-dotenv": "^3.4.9",
     "react-native-encrypted-storage": "^4.0.3",
-    "react-native-gesture-handler": "^2.12.1",
+    "react-native-gesture-handler": "^2.13.4",
+    "react-native-image-crop-picker": "^0.40.1",
+    "react-native-image-picker": "^7.0.0",
     "react-native-linear-gradient": "^2.8.2",
     "react-native-otp-textinput": "^1.1.1",
     "react-native-phone-number-input": "^2.1.0",
+    "react-native-reanimated": "^3.5.4",
+    "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
     "react-native-svg": "^13.14.0",
