- add custom font family, add FormSelect, FormSwitch Components - add CreateField and EditFieldImages screens

--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     "dev": "tsx watch --clear-screen=false src/app.ts",
     "build": "tsup",
     "start": "node build/app.js",
+    "db:studio": "prisma studio --port 5556",
     "typecheck": "tsc"
   },
   "keywords": [],
