--- a/mobile/ios/PitchSpot/Info.plist
+++ b/mobile/ios/PitchSpot/Info.plist
@@ -36,7 +36,7 @@
 		</dict>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -51,5 +51,18 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>lato_black.ttf</string>
+		<string>lato_blackitalic.ttf</string>
+		<string>lato_bold.ttf</string>
+		<string>lato_bolditalic.ttf</string>
+		<string>lato_italic.ttf</string>
+		<string>lato_light.ttf</string>
+		<string>lato_lightitalic.ttf</string>
+		<string>lato_regular.ttf</string>
+		<string>lato_thin.ttf</string>
+		<string>lato_thinitalic.ttf</string>
+	</array>
 </dict>
 </plist>
