--- a/mobile/package.json
+++ b/mobile/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
+    "typecheck": "yarn tsc",
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "lint": "eslint .",
@@ -14,6 +15,7 @@
     "@hookform/resolvers": "^3.2.0",
     "@react-native-async-storage/async-storage": "^1.19.3",
     "@react-native-community/blur": "^4.3.2",
+    "@react-native-picker/picker": "^2.5.1",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
     "@rneui/base": "^4.0.0-rc.8",
@@ -27,6 +29,7 @@
     "jetifier": "^2.0.0",
     "jotai": "^2.4.1",
     "libphonenumber-js": "^1.10.44",
+    "native-base": "^3.4.28",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-hook-form": "^7.45.4",
@@ -40,12 +43,14 @@
     "react-native-linear-gradient": "^2.8.2",
     "react-native-otp-textinput": "^1.1.1",
     "react-native-phone-number-input": "^2.1.0",
+    "react-native-picker-select": "^9.0.0",
     "react-native-reanimated": "^3.5.4",
     "react-native-reanimated-carousel": "^3.5.1",
-    "react-native-safe-area-context": "^4.7.2",
+    "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "^3.25.0",
-    "react-native-svg": "^13.14.0",
+    "react-native-svg": "12.1.1",
     "react-native-vector-icons": "^10.0.0",
+    "server": "file:../server",
     "tailwind-merge": "^1.14.0",
     "zod": "^3.22.2"
   },
