--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,8 @@
     "dev": "tsx watch --clear-screen=false src/app.ts",
     "build": "tsup",
     "start": "node build/app.js",
+    "db:generate": "prisma generate",
+    "db:migrate": "prisma migrate dev",
     "db:studio": "prisma studio --port 5556",
     "typecheck": "tsc"
   },
@@ -30,6 +32,7 @@
     "@fastify/bearer-auth": "^9.0.0",
     "@fastify/sensible": "^5.2.0",
     "@fastify/swagger": "^8.3.1",
+    "@google-cloud/storage": "^7.6.0",
     "@prisma/client": "5.2.0",
     "@trpc/server": "^10.38.1",
     "bcrypt": "^5.1.0",
