handle removing field images and add fields list screen

--- a/.gitignore
+++ b/.gitignore
@@ -61,6 +61,7 @@ mobile/vendor/bundle/
 
 # Temporary files created by Metro to check the health of the file watcher
 mobile/.metro-health-check*
+mobile/cockroach-data
 
 # testing
 **/coverage
